--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
             <section class="seccionCuatro">
 
-                <h2 class="tituloDos">Comentarios</h2>
+                <h2 class="tituloDos">Testimonios</h2>
             
                     <div class="comen">
                         <div class="subComenUno" >
