--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esta es la página donde se pueden contactar conmigo para algun trabajo o proyecto">
-    <meta name="keywords"  content="contactame, formulario, rubros, campos, agendar, correo, dudas">
+    <meta name="keywords"  content="contactame, formulario, campos, correo, dudas">
     <title>Silvina-Contacto</title>
      <!-- Link Bootstrap -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -59,7 +59,7 @@
         </div>
 
         <div class="boton">
-            <a class="botonUno" href="#">Contáctame</a>
+            <a class="botonUno" href="#">Ir a la tienda</a>
         </div>
     </article>
         <div>
